fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -182,7 +182,7 @@ body {
 	font-size: var(--fs-xxxl);
 	font-weight: var(--fw-bold);
 	text-align: center;
-	height: 3em;
+	height: 6em;
 	width: 14em;
 	display: block;
 	color: var(--color-dark-brown1);
